--- a/greenhousegases.html
+++ b/greenhousegases.html
@@ -28,23 +28,26 @@
         class="navbar navbar-expand-sm navbar-light quicksand gradient-background"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="index.html#">
             <img
               class="d-inline-block align-text-top mainlogo"
-              src="https://cdn.glitch.global/4fddc2d2-8afe-4546-a021-281e7b5d551b/myEarthLogo.png?v=1653168263149"
+              src="https://cdn.glitch.global/4fddc2d2-8afe-4546-a021-281e7b5d551b/logo2.png?v=1653202546776"
               width="219px"
               height="80px"
             />
           </a>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link white" href="#">Placeholder</a>
+              <a class="nav-link white" href="index.html#full-container" style="border-right: 1px solid white;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link white" href="index.html#howtohelp">How To Help</a>
+              <a class="nav-link white" href="index.html#globeViz" style="border-right: 1px solid white;">Carbon Emission Visualizer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link white" href="greenhousegases.html"
+              <a class="nav-link white" href="index.html#howtohelp" style="border-right: 1px solid white;">How To Help</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="curselected" href="greenhousegases.html"
                 >Greenhouse Gases</a
               >
             </li>
@@ -54,7 +57,7 @@
 
       
       
-      <div class="container dark-background">
+      <div class="container">
         <h1 class="maintitle">
         Types of Greenhouse Gases
       </h1>
