➕🎡 Updated with Glitch

--- a/greenhousegases.html
+++ b/greenhousegases.html
@@ -58,9 +58,11 @@
       
       
       <div class="container">
-        <h1 class="maintitle">
-        Types of Greenhouse Gases
-      </h1>
+        <span class="maintitle-wrapper">
+                  <h1 class="maintitle">
+          Types of Greenhouse Gases
+        </h1>
+        </span>
         <div class="row accordion-cont">
           <div class="">
             <div class="accordion" id="accordionExample">
