--- a/index.html
+++ b/index.html
@@ -257,8 +257,10 @@
         This is a project for
         <a class="linkthing" href="https://hthshacks-22.devpost.com/"
           >hths.hacks() 2022</a
+        > and <a class="linkthing" href="https://pantherhack2022.devpost.com/"
+          >PantherHack2022</a
         >
-        by Arca Baran, Warren Guo, Raahil Jain, and Irina Y.
+        by Arca Baran, Warren Guo, Raahil Jain, and Irina Yerman.
       </p>
       <p id="copyright">&copy;myEarth 2022</p>
     </div>
